# discovery

./: .gitignore  AGENTS.md  CLAUDE.md  MAPS.md  README.md  SKILLS.md  SOURCES.md  camera.geojson  cameras.md  map.html  pyproject.toml
docs/: DIRECTORY_STRUCTURE.md
notebooks/: 01_discovery.ipynb  01_pipeline.ipynb  02_validation.ipynb  04_maintenance.ipynb  camera_discovery.ipynb  llm_scope_enforcement_validation.ipynb  wcd_pipeline.ipynb  webcam_discovery_agentic_smoke_test_colab.ipynb  webcam_discovery_feed_discovery_colab_test.ipynb
scripts/: run_maintenance.py  run_pipeline.py
src/webcam_discovery/: cli.py  config.py  http_client.py  pipeline.py  schemas.py
tests/: conftest.py  test_agentic_cli_search_plan.py  test_agentic_pipeline_catalog_mode.py  test_candidate_relevance.py  test_deep_discovery_agent.py  test_directory_crawler.py  test_feed_parsers.py  test_funnel_and_dedup.py  test_hls_playlist_analysis.py  test_location_expansion.py  test_planner_agent.py  test_search_agent.py  test_search_agent_custom_queries.py  test_search_planning.py  test_search_result_triage.py  test_target_resolution.py  test_validator.py
tests/agents/: test_catalog.py  test_validator.py
tests/skills/: test_deduplication.py  test_feed_validation.py  test_geo_enrichment.py
webcam-discovery/: AGENTS.md  MAPS.md  SOURCES.md  cameras.md  map.html
webcam-discovery/notebooks/: 00_setup.ipynb  03_catalog_and_map.ipynb
webcam-discovery/scripts/: run_catalog.py  run_discovery.py  run_search.py  run_validation.py
webcam-discovery/tests/: CLAUDE.md  conftest.py  test_schemas.py
(+63 files in other folders)
