[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcam-discovery"
version = "0.1.0"
description = "Discovers, validates, and maps publicly accessible webcams worldwide"
requires-python = ">=3.11"
dependencies = [
    "httpx[asyncio]>=0.27",
    "beautifulsoup4>=4.12",
    "playwright>=1.44",
    "rapidfuzz>=3.6",
    "geopy>=2.4",
    "tldextract>=5.1",
    "langdetect>=1.0",
    "deep-translator>=1.11",
    "validators>=0.28",
    "python-slugify>=8.0",
    "schedule>=1.2",
    "loguru>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "tqdm>=4.66",
    "ddgs>=9.0",
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]
notebooks = ["jupyter>=1.0", "ipywidgets>=8.0", "folium>=0.16"]
memory = ["memweave"]
video-summary = ["faster-whisper>=1.0"]

[project.scripts]
wcd-pipeline = "webcam_discovery.pipeline:main"
wcd-discover = "webcam_discovery.agents.directory_crawler:main"
wcd-search   = "webcam_discovery.agents.search_agent:main"
wcd-validate = "webcam_discovery.agents.validator:main"
wcd-catalog  = "webcam_discovery.agents.catalog:main"
wcd-maintain = "webcam_discovery.agents.maintenance:main"
webcam-discovery = "webcam_discovery.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
